--- a/Bank-3x/Account.xaml
+++ b/Bank-3x/Account.xaml
@@ -8,16 +8,32 @@
         Title="Account" Height="450" Width="628">
     <Grid>
 
-        <Label Content="" x:Name="Money" FontSize="20" HorizontalAlignment="Left" Height="49" Margin="34,58,0,0" VerticalAlignment="Top" Width="290"/>
+        <Label Content="" x:Name="Money" FontSize="20" HorizontalAlignment="Left" Height="49" Margin="34,58,0,0" VerticalAlignment="Top" Width="201"/>
         <Label Content="Сумма денег на счету:" HorizontalAlignment="Left" Height="29" Margin="34,24,0,0" VerticalAlignment="Top" Width="290"/>
-        <Label Content="" x:Name="CardNumberLabel" HorizontalAlignment="Left" Height="31" Margin="34,112,0,0" VerticalAlignment="Top" Width="290"/>
-        <Button Content="перевести" x:Name="Translate" Click="Translate_Click" HorizontalAlignment="Left" Margin="34,173,0,0" VerticalAlignment="Top" Width="109" Height="28"/>
-        <Button Content="капитализация" x:Name="Capitalization" Click="Capitalization_Click" HorizontalAlignment="Left" Height="25" Margin="34,286,0,0" VerticalAlignment="Top" Width="109"/>
-        <Button Content="взять кредит" x:Name="Сredit" Click="Сredit_Click" HorizontalAlignment="Left" Margin="454,286,0,0" VerticalAlignment="Top" Width="112" Height="25"/>
+        <Label Content="" x:Name="CardNumberLabel" HorizontalAlignment="Left" Height="31" Margin="34,112,0,0" VerticalAlignment="Top" Width="201"/>
+        <Button Content="перевести" x:Name="Translate" Click="Translate_Click" HorizontalAlignment="Left" Margin="171,286,0,0" VerticalAlignment="Top" Width="112" Height="25"/>
+        <Button Content="капитализация" x:Name="Capitalization" Click="Capitalization_Click" HorizontalAlignment="Left" Height="25" Margin="34,286,0,0" VerticalAlignment="Top" Width="112"/>
+        <Button Content="взять кредит" x:Name="Сredit" Click="Сredit_Click" HorizontalAlignment="Left" Margin="463,286,0,0" VerticalAlignment="Top" Width="124" Height="25"/>
         <Label Content="" x:Name="CapitalizationNumber" HorizontalAlignment="Left" Height="28" Margin="34,329,0,0" VerticalAlignment="Top" Width="201"/>
-        <Label Content="" x:Name="СreditNumber" HorizontalAlignment="Left" Height="28" Margin="418,329,0,0" VerticalAlignment="Top" Width="148"/>
-        <Label x:Name="CreditPresent" HorizontalAlignment="Left" Height="26" Margin="310,362,0,0" VerticalAlignment="Top" Width="256"/>
-
-
+        <Label Content="" x:Name="СreditNumber" HorizontalAlignment="Left" Height="28" Margin="438,325,0,0" VerticalAlignment="Top" Width="148"/>
+        <Label x:Name="CreditPresent" HorizontalAlignment="Left" Height="26" Margin="330,372,0,0" VerticalAlignment="Top" Width="256"/>
+        <ListBox x:Name="MSGSupport" 
+                 Margin="288,24,0,241" HorizontalAlignment="Left" Width="322" 
+                 >
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderBrush="Black" Margin="5" BorderThickness="1" CornerRadius="5
+                            ">
+                        <StackPanel Margin="10">
+                            <TextBlock Text="{Binding MSG}" Margin="0" FontSize="10"/>
+                            <TextBlock Text="{Binding Date}" Margin="10 0" FontSize="8"
+                                       Foreground="Gray" TextAlignment="Right"  HorizontalAlignment="Right"/>
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <Button Content="изменить данные о себе" x:Name="changeContact" Click="changeContact_Click" HorizontalAlignment="Left" Margin="444,0,0,0" VerticalAlignment="Center" Width="162" Height="25"/>
+        <Button Content="выйти из аккаунта" x:Name="ExitAccount" Click="ExitAccount_Click" HorizontalAlignment="Left" Height="39" Margin="10,374,0,0" VerticalAlignment="Top" Width="124"/>
     </Grid>
 </Window>
