--- a/Bank-3x/Capitalisation.xaml
+++ b/Bank-3x/Capitalisation.xaml
@@ -14,7 +14,7 @@
         <Label Content="Сколько получите через год:" HorizontalAlignment="Left" Height="28" Margin="10,154,0,0" VerticalAlignment="Top" Width="187" RenderTransformOrigin="0.184,0.358"/>
         <Label Content="" x:Name="MoneyEarsCapit" HorizontalAlignment="Left" Height="34" Margin="10,182,0,0" VerticalAlignment="Top" Width="187"/>
         <Button Content="Внести" Click="ButtonCapit_Click" x:Name="ButtonCapit" HorizontalAlignment="Left" Margin="226,120,0,0" VerticalAlignment="Top" Width="145" RenderTransformOrigin="0.746,2.434" Height="36"/>
-        <Label Content="" Foreground="Red" x:Name="MessageBox" HorizontalAlignment="Left" Height="90" Margin="226,161,0,0" VerticalAlignment="Top" Width="145"/>
+        <Label Content="" Foreground="Red" x:Name="MessageBoxWPF" HorizontalAlignment="Left" Height="90" Margin="226,161,0,0" VerticalAlignment="Top" Width="145"/>
         <Label Content="" x:Name="InfMoneyYears" HorizontalAlignment="Left" Height="25" Margin="10,216,0,0" VerticalAlignment="Top" Width="187"/>
         <Label Content="выбрать капитализацию:" HorizontalAlignment="Left" Height="27" Margin="10,10,0,0" VerticalAlignment="Top" Width="187"/>
         <ComboBox HorizontalAlignment="Left"  x:Name="Combobox" Height="30" Margin="10,42,0,0" VerticalAlignment="Top" Width="187" >
