--- a/Bank-3x/CangneContact.xaml
+++ b/Bank-3x/CangneContact.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bank_3x"
         mc:Ignorable="d"
-        Title="CangneContact" Height="450" Width="800">
+        Title="CangneContact" Height="450" Width="400">
     <Grid>
         <Label Content="Изменить имя"  HorizontalAlignment="Left" Height="28" Margin="26,24,0,0" VerticalAlignment="Top" Width="144"/>
         <Label Content="Изменить пароль"  HorizontalAlignment="Left" Height="28" Margin="26,242,0,0" VerticalAlignment="Top" Width="144"/>
@@ -14,6 +14,7 @@
         <TextBox HorizontalAlignment="Left" Margin="26,79,0,0" TextWrapping="Wrap" Text="" x:Name="ChangeName" VerticalAlignment="Top" Width="144" Height="34"/>
         <TextBox HorizontalAlignment="Left" Margin="26,183,0,0" TextWrapping="Wrap" Text="" x:Name="ChangeLastName" VerticalAlignment="Top" Width="144" Height="34"/>
         <TextBox HorizontalAlignment="Left" Margin="26,289,0,0" TextWrapping="Wrap" Text="" x:Name="ChangePassword" VerticalAlignment="Top" Width="144" Height="34"/>
+        <TextBlock HorizontalAlignment="Left" Margin="200,358,0,0" TextWrapping="Wrap" x:Name="MessageText" VerticalAlignment="Top" Height="52" Width="190"/>
 
     </Grid>
 </Window>
