--- a/Bank-3x/MainWindow.xaml
+++ b/Bank-3x/MainWindow.xaml
@@ -18,11 +18,12 @@
             </ListView.View>
         </ListView>
 
-        <TextBox HorizontalAlignment="Left" x:Name="log" Height="23" Margin="523,236,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="172"/>
-        <Button Content="войти" x:Name="HefNow" Click="HefNow_Click"  HorizontalAlignment="Left" Margin="558,337,0,0" VerticalAlignment="Top" Width="97"/>
-        <Label Content="логин:" HorizontalAlignment="Left" Margin="461,233,0,0" VerticalAlignment="Top" Width="57"/>
-        <Label Content="пароль:" HorizontalAlignment="Left" Margin="461,281,0,0" VerticalAlignment="Top" Width="57"/>
-        <PasswordBox HorizontalAlignment="Left" x:Name="pass" Margin="523,289,0,0" VerticalAlignment="Top" Width="172" RenderTransformOrigin="0.017,0.313"/>
+        <TextBox HorizontalAlignment="Left" x:Name="log" Height="31" Margin="523,79,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="172"/>
+        <Button Content="войти" x:Name="HefNow" Click="HefNow_Click"  HorizontalAlignment="Left" Margin="558,214,0,0" VerticalAlignment="Top" Width="97" Height="26"/>
+        <Label Content="логин:" HorizontalAlignment="Left" Margin="461,75,0,0" VerticalAlignment="Top" Width="57" Height="35"/>
+        <Label Content="пароль:" HorizontalAlignment="Left" Margin="461,139,0,0" VerticalAlignment="Top" Width="57" Height="34"/>
+        <PasswordBox HorizontalAlignment="Left" x:Name="pass" Margin="523,150,0,0" VerticalAlignment="Top" Width="172" RenderTransformOrigin="0.017,0.313" Height="23"/>
+        <TextBlock HorizontalAlignment="Left" Margin="461,278,0,0" TextWrapping="Wrap" x:Name="MessageException" VerticalAlignment="Top" Height="79" Width="246" Foreground="#FFCA2020"/>
 
     </Grid>
 </Window>
